# billcheck

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: main.py  sum.py  test_sum_bills.py  test_totals.py  totals.py
src/currency/: usd.py
testdata/: bills.csv
