[tool.poetry]
name = "billcheck"
version = "0.1.0"
description = "A way to see your financial future"
authors = ["Ken Howard <ken@kenhoward.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
